finally could solve gap between border and content problem in webkit browsers. also did a lot of improvements in style.

--- a/css/general.scss
+++ b/css/general.scss
@@ -72,7 +72,7 @@ a.primary {
 
 h1.section {
   color: rgba($color: #000000, $alpha: 0.05);
-  font-size: clamp(2.4rem, 15vmin, 10rem);
+  font-size: clamp(2.4rem, 10vmin, 10rem);
   letter-spacing: 0.1em;
   text-align: center;
   padding: 0.8em 0 0.4em 0;
