--- a/css/utilities.scss
+++ b/css/utilities.scss
@@ -18,6 +18,6 @@
 
 @media screen and (min-width: 1400px) {
   :root {
-    --gap: clamp(10px, 10vw, 500px);
+    --gap: clamp(10px, 15vw, 500px);
   }
 }
